update them cai giao dien

--- a/ASSETS/CSS/reponsive.css
+++ b/ASSETS/CSS/reponsive.css
@@ -24,11 +24,11 @@
 
 /* mobile */
 @media (max-width: 740px){
-    .header{
+    #header{
         
     }
 
-    .header .search-btn{
+    #header .search-btn{
         display: none;
     }
 
